# murmur3

./: Cargo.toml
benches/: bench.rs
murmur3-sys/: Cargo.toml
src/: lib.rs  murmur3_x64_128.rs
tests/: hash64_128_tests.rs  quickcheck.rs  test.rs
